<resources>
    <string name="app_name">ChannelUPM</string>

    <string name="confirm">CONFIRMAR</string>
    <string name="menu_continue">CONTINUAR</string>

    <string name="enter_url">URL de imagen</string>

    <string name="error_message">Algo ha ido mal...</string>
    <string name="error_confirm">OK</string>

    <string name="error_dialog_tag">Error dialog</string>
    <string name="information_dialog_tag">Information dialog</string>

    <string name="saved_user_id_key">UserIdKey</string>

    <!-- user guide -->
    <string name="no_news">Nada por aqui? Accede a la sección de ajustes y actualiza tus intereses para visualizar noticias!</string>
    <string name="no_contacts">El bot de ChannelUPM se siente solo:( Añade contactos pulsando el botón de arriba a la derecha!</string>
    <string name="no_groups">Nada por aqui? Crea un grupo pulsando el botón de arriba a la derecha! Pero recuerda, necesitarás al menos un contacto para crear un grupo!</string>

    <!-- login & register -->
    <string name="welcome">Bienvenido a ChannelUPM!</string>
    <string name="input_name">Introduce tu nombre</string>
    <string name="input_mail">Introduce tu correo</string>
    <string name="input_password">Introduce tu contraseña</string>
    <string name="confirm_password">Confirma tu contraseña</string>
    <string name="confirm_login">INICIAR SESIÓN</string>
    <string name="firstTime">¿Primera vez?</string>
    <string name="register">¡REGÍSTRATE!</string>
    <string name="login_error_mail_found">Correo ya registrado</string>
    <string name="login_error_no_upm_mail">No es un correo o no pertenece a la UPM</string>
    <string name="login_error_password_mail_dont_match">La contraseña o el correo son incorrectos</string>
    <string name="register_section">Registro de usuario</string>
    <string name="register_error_mail_registered">Este correo ya está registrado</string>
    <string name="register_error_password_weak">Debe tener minúscula, mayúscula y un número</string>
    <string name="register_error_password_short">La contraseña debe tener entre 8 y 20 caractéres</string>
    <string name="register_error_passwords_dont_match">Las contraseñas deben ser iguales</string>
    <string name="enter_all_fields">Debes rellenar todos los campos para continuar</string>
    <string name="user_created">Usuario creado!</string>

    <!-- menus -->
    <string name="news_section">Noticias</string>
    <string name="contacts_section">Contactos</string>
    <string name="groups_section">Grupos</string>
    <string name="messages_section">Mensajes</string>
    <string name="settings_section">Ajustes</string>

    <!--  News fragment -->
    <string name="news_fragment_title">Noticias UPM</string>
    <string name="add_newsItem_fragment_title">Añadir noticia</string>
    <string name="edit_newsItem_fragment_title">Editar noticia</string>
    <string name="add_newsItem_title">Título de la noticia</string>
    <string name="add_newsItem_description">Descripción de la noticia</string>
    <string name="add_categories_news">Seleccionar categoría</string>
    <string name="need_select_category">Debes seleccionar una categoría</string>
    <string name="newsItem_created">Noticia creada!</string>
    <string name="newsItem_edited">Noticia editada!</string>

    <!-- Contacts fragment-->
    <string name="search_contact">Buscar contacto</string>
    <string name="contact_info_title">Información de contacto</string>
    <string name="contact_info_to_chat">Conversación</string>
    <string name="remove_cotact">Eliminar contacto</string>
    <string name="contact_info_no_mail">Sin correo</string>
    <string name="contact_info_no_description">Sin descripción</string>
    <string name="add_contact_title">Añadir contacto</string>
    <string name="contact_added">Contacto añadido</string>
    <string name="contact_removed">Contacto eliminado</string>

    <!-- Messages -->
    <string name="write_here_text">Escriba aqui</string>
    <string name="text_required">No se pueden enviar mensjaes vacíos</string>
    <string name="cant_send_to_contact">No se pueden enviar mensajes a este contacto</string>
    <string name="add_group_title">Añadir grupo</string>
    <string name="add_group_group_title">Título del grupo</string>
    <string name="add_group_group_description">Descripción del grupo</string>
    <string name="group_added">Grupo creado!</string>
    <string name="group_edited">Información de grupo editada!</string>
    <string name="group_edit">Editar información</string>
    <string name="group_info">Información de grupo</string>
    <string name="participants">Participantes</string>
    <string name="exit_group">Salir del grupo</string>
    <string name="group_delete">Borrar grupo</string>
    <string name="edit_participants">Editar permisos</string>
    <string name="add_participant">Añadir participante</string>
    <string name="particiant_added">Participante añadido</string>
    <string name="edit_group_info">Editar información</string>
    <string name="group_needs_one_administrator">El grupo debe tener al menos un administrador</string>
    <string name="need_to_be_admin_add_participants">Debes ser administrador del grupo para añadir participantes</string>
    <string name="need_to_be_admin_edit_participants">Debes ser administrador del grupo para editar los permisos</string>
    <string name="need_to_be_admin_edit_info">Debes ser administrador del grupo para editar la información</string>
    <string name="cant_edit_own_permissions">No puedes editar tus permisos</string>
    <string name="cant_exit_not_enough_admin">No puedes salir de un grupo en el que eres el único administrador del grupo</string>
    <string name="need_to_be_admin_to_delete_group">Debes ser administrador del grupo para poder borrarlo</string>
    <string name="exited_from_group">Has salido del grupo</string>
    <string name="group_removed">El grupo ha sido eliminado</string>
    <string name="search_group">Buscar grupo</string>
    <string name="no_messages_registered">Sin registro de mensajes</string>
    
    <!-- Settings -->
    <string name="my_profile">Mi perfil</string>
    <string name="my_interests">Categorías de interés</string>
    <string name="app_theme">Tema de aplicación</string>
    <string name="news_notifications">Notificaciones de noticias</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_updated">Información de usuario actualizada!</string>
    <string name="description_is_empty">Tu descripción está vacía, rellénala para que los demás puedan conocerte mejor!</string>
    <string name="cant_edit_mail">No puedes editar tu dirección de correo</string>
    <string name="name_cant_be_empty">El nombre de usuario no puede ser vacío</string>
    <string name="select_categories">Selecciona las categorías de tu interés</string>
    <string name="interests_updated">Intereses actualizados!</string>
</resources>