<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/news_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/news_section"/>

    <item
        android:id="@+id/contacts_fragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts_section"/>

    <item
        android:id="@+id/messages_fragment"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages_section"/>

    <item
        android:id="@+id/groups_fragment"
        android:icon="@drawable/ic_groups"
        android:title="@string/groups_section"/>

    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_section"/>

</menu>