<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:maxLines="2"
        android:textSize="28pt"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_textBox"
        android:layout_marginTop="@dimen/default_margin"/>

    <EditText
        android:id="@+id/username_textBox"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="@dimen/login_text_height"
        android:background="@drawable/button_rounded"
        android:hint="@string/input_mail"
        android:textColorHint="@color/light_grey"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/login_text_side_margin"
        android:layout_marginRight="@dimen/login_text_side_margin"/>

    <TextView
        android:id="@+id/error_text_mail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_erro_text_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_textBox"
        android:text="@string/login_error_no_mail"
        android:textColor="@color/red"
        android:layout_marginLeft="@dimen/default_margin"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/password_textBox"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="@dimen/login_text_height"
        android:background="@drawable/button_rounded"
        android:hint="@string/input_password"
        android:textColorHint="@color/light_grey"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textBox"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/login_text_side_margin"
        android:layout_marginRight="@dimen/login_text_side_margin"/>

    <TextView
        android:id="@+id/error_text_password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_erro_text_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_textBox"
        android:text="@string/login_error_password_weak"
        android:textColor="@color/red"
        android:layout_marginLeft="@dimen/default_margin"
        android:visibility="gone"/>

    <Button
        android:id="@+id/Login_button"
        android:layout_width="@dimen/login_register_button_width"
        android:layout_height="@dimen/login_register_button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textBox"
        android:text="@string/confirm_login"
        android:maxLines="1"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="@dimen/login_register_button_top_margin"/>

    <TextView
        android:id="@+id/first_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/firstTime"
        android:textSize="14pt"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_button"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/login_text_top_margin"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/login_register_button_width"
        android:layout_height="@dimen/login_register_button_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_button"
        android:text="@string/register"
        android:maxLines="1"
        android:backgroundTint="@color/purple"
        android:layout_marginRight="@dimen/login_text_top_margin"
        android:layout_marginTop="@dimen/login_register_button_top_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>