<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_back_button"
            android:layout_marginLeft="@dimen/login_text_top_margin"
            android:layout_marginTop="@dimen/login_text_top_margin"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register_section"
            android:textColor="@color/white"
            android:textSize="16pt"/>

        <EditText
            android:id="@+id/name_textBox"
            android:layout_width="@dimen/login_text_width"
            android:layout_height="@dimen/login_text_height"
            android:background="@drawable/rounded_text_box_purple"
            android:hint="@string/input_name"
            android:textColorHint="@color/light_grey"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            android:layout_marginTop="@dimen/login_register_button_height"
            android:layout_marginLeft="@dimen/login_text_side_margin"
            android:layout_marginRight="@dimen/login_text_side_margin"/>

        <EditText
            android:id="@+id/mail_textBox"
            android:layout_width="@dimen/login_text_width"
            android:layout_height="@dimen/login_text_height"
            android:background="@drawable/rounded_text_box_purple"
            android:hint="@string/input_mail"
            android:textColorHint="@color/light_grey"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_textBox"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/login_text_side_margin"
            android:layout_marginRight="@dimen/login_text_side_margin"/>

        <EditText
            android:id="@+id/password_textBox"
            android:layout_width="@dimen/login_text_width"
            android:layout_height="@dimen/login_text_height"
            android:background="@drawable/rounded_text_box_purple"
            android:hint="@string/input_password"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mail_textBox"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/login_text_side_margin"
            android:layout_marginRight="@dimen/login_text_side_margin"/>

        <EditText
            android:id="@+id/confirm_password_textBox"
            android:layout_width="@dimen/login_text_width"
            android:layout_height="@dimen/login_text_height"
            android:background="@drawable/rounded_text_box_purple"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_textBox"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/login_text_side_margin"
            android:layout_marginRight="@dimen/login_text_side_margin"/>

        <Button
            android:id="@+id/confirm_registration_button"
            android:layout_width="@dimen/login_register_button_width"
            android:layout_height="@dimen/login_register_button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_textBox"
            android:maxLines="1"
            android:background="@drawable/rounded_text_box_purple"
            android:text="@string/confirm"
            android:layout_marginTop="@dimen/login_register_button_top_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>