<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/ic_back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/smallest_margin"
            android:layout_marginStart="@dimen/smallest_margin"/>

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/news_fragment_logo_width"
            android:layout_height="@dimen/news_fragment_logo_height"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/smallest_margin"
            android:layout_marginEnd="@dimen/smallest_margin"/>

        <TextView
            android:id="@+id/title_text"
            style="@style/default_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_newsItem_fragment_title"
            android:textSize="@dimen/big_text"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            android:layout_marginTop="@dimen/smallest_margin"/>

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_news_title_input_height"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            android:background="@drawable/rounded_input_box"
            android:textColorHint="?attr/colorPrimaryInverse"
            android:inputType="text"
            android:hint="@string/add_newsItem_title"
            android:padding="@dimen/smallest_margin"
            android:maxLines="1"
            android:maxLength="30"
            style="@style/default_text"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/smallest_margin"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_input"
            android:background="@drawable/rounded_input_box"
            android:textColorHint="?attr/colorPrimaryInverse"
            android:inputType="textMultiLine"
            android:hint="@string/add_newsItem_description"
            android:padding="@dimen/smallest_margin"
            android:maxLength="1000"
            android:minLines="16"
            android:maxLines="16"
            android:gravity="top|start"
            style="@style/default_text"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/smallest_margin"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_button"
            android:layout_width="@dimen/login_register_button_width"
            android:layout_height="@dimen/login_register_button_height"
            app:layout_constraintTop_toBottomOf="@id/description_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_button"
            android:text="@string/menu_continue"
            style="@style/default_text"
            android:layout_marginTop="@dimen/small_margin"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>