<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_image"
        android:layout_width="@dimen/fragment_logo_width"
        android:layout_height="@dimen/fragment_logo_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/smallest_margin"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_group_button"
            android:layout_width="@dimen/news_fragment_add_image_side"
            android:layout_height="@dimen/news_fragment_add_image_side"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_plus"
            android:layout_marginEnd="@dimen/smallest_margin"
            android:layout_marginTop="@dimen/smallest_margin"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text"
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image"
            android:layout_centerHorizontal="true"
            android:text="@string/groups_section"
            android:textSize="@dimen/big_text"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_input"
            android:layout_width="@dimen/login_text_width"
            android:layout_height="@dimen/login_text_height"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_input_box"
            android:hint="@string/search_contact"
            style="@style/default_text"
            android:padding="@dimen/smallest_margin"
            android:drawableEnd="@drawable/ic_search"/>

        <View
            android:id="@+id/search_input_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/search_input"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/smallest_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groups_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/no_groups_text"
            android:layout_below="@id/search_input_separator"/>

        <TextView
            android:id="@+id/no_groups_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="@style/default_text"
            android:textSize="@dimen/normal_text"
            android:text="@string/no_groups"
            android:gravity="center"
            android:layout_marginBottom="@dimen/huge_margin"
            android:visibility="gone"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>